# flight-euler-path

./: Cargo.toml  README.md  openapi.yaml
src/: domain.rs  main.rs  properties.rs  routes.rs  service.rs  util.rs
src/config/: config.yaml
src/domain/: error.rs  http.rs
src/service/: flight_itinerary_service.rs
